--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </div>
     <div class="container">
         <img src="assets/images/assumption certificate.jpg" alt="" class="certificate" >
-        <img src="/assets/images/BOOTCAMP CERTIFICATE.jpg"  alt="" class="certificate"  >
-        <img src="/assets/images/FIGMA CERTIFICATE.jpg" alt="" class="certificate">
-        <img src="/assets/images/JavaScript DSA.png" alt="" class="certificate">
-        <img src="/assets/images/STEP ONE CERTIFICATE.jpg" alt="" class="certificate">
+        <img src="assets/images/BOOTCAMP CERTIFICATE.jpg"  alt="" class="certificate"  >
+        <img src="assets/images/FIGMA CERTIFICATE.jpg" alt="" class="certificate">
+        <img src="assets/images/JavaScript DSA.png" alt="" class="certificate">
+        <img src="assets/images/STEP ONE CERTIFICATE.jpg" alt="" class="certificate">
     </div>
 
     <div id="popup" class="popup hidden">
@@ -26,6 +26,6 @@
         </div>
         <div id="popup-thumbnails" class="thumbnail-container"></div>
     </div>
-    <script src="/assets/script/script.js"></script>
+    <script src="assets/script/script.js"></script>
 </body>
 </html>
