added more certificates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
+    
     <title>Document</title>
 </head>
 <body>
@@ -12,11 +13,15 @@
         <h1>My Certificate Gallery</h1>
     </div>
     <div class="container">
-        <img src="assets/images/assumption certificate.jpg" alt="" class="certificate" >
-        <img src="assets/images/BOOTCAMP CERTIFICATE.jpg"  alt="" class="certificate"  >
-        <img src="assets/images/FIGMA CERTIFICATE.jpg" alt="" class="certificate">
-        <img src="assets/images/JavaScript DSA.png" alt="" class="certificate">
-        <img src="assets/images/STEP ONE CERTIFICATE.jpg" alt="" class="certificate">
+        <img src="assets/images/assumption certificate.jpg" alt="assumption hackathon certificate" class="certificate" >
+        <img src="assets/images/BOOTCAMP CERTIFICATE.jpg"  alt="web design bootcamp" class="certificate"  >
+        <img src="assets/images/FIGMA CERTIFICATE.jpg" alt="figma workshop" class="certificate">
+        <img src="assets/images/JavaScript DSA.png" alt="JavaScript DSA" class="certificate">
+        <img src="assets/images/STEP ONE CERTIFICATE.jpg" alt="IoT workshop" class="certificate">
+        <img src="assets/images/Screenshot 2025-07-29 200943.png" alt="web dev by simply learn" class="certificate">
+        <img src="assets/images/responsive web FCC.jpg" alt="responsive web design" class="certificate">
+        <img src="assets/images/Screenshot 2025-07-29 201008.png" alt="hacktober fest" class="certificate">
+        <img src="assets/images/Screenshot 2025-07-29 201030.png" alt="Nasa space app hackathon" class="certificate">
     </div>
 
     <div id="popup" class="popup hidden">
